<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".SextaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="Quem foi o criador da linguagem PHP?"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:onClick="obterRadioClicado"
            android:text="@string/radioBtn01"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:onClick="obterRadioClicado"
            android:text="@string/radioBtn02"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:onClick="obterRadioClicado"
            android:text="@string/radioBtn03"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:onClick="obterRadioClicado"
            android:text="@string/radioBtn04"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:onClick="obterRadioClicado"
            android:text="@string/radioBtn05"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_6"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:onClick="obterRadioClicado"
            android:text="@string/radioBtn06"/>

    </RadioGroup>

</LinearLayout>